@@ -5,11 +5,6 @@ _This todo list describes ChrisAnt996's current intended roadmap for Clink's fut
 # RELEASE
 
 ## Issues
-- Changing the terminal width can cause Readline to be confused regarding on what row to display the prompt.
-  - It's ok when shrinking the width and the input line is a single line.
-  - It goes wrong when expanding the width and the input line is two or more lines.
-  - It goes wrong when shrinking the width and the input line is two or more lines.
-  - _Update: new logic seems to work correctly **if and only if** the window is resized slowly. When resized quickly, the async width change messes things up quickly+badly._
 
 ## Investigate
 
